# git-client-app

./: package-lock.json  package.json
app_core/: Cargo.toml
app_core/app/src/: git_branch.rs  git_log.rs  lib.rs
app_core/app/tests/: git_branch.rs
app_core/app/tests/fixture/: mod.rs
app_core/domain/: Cargo.toml
app_core/domain/src/: error.rs  lib.rs  value.rs
app_core/domain/src/command/: git_branch.rs  git_log.rs  mod.rs
app_core/domain/src/service/: git_branch.rs  git_log.rs  mod.rs
app_core/infrastructure/: Cargo.toml
app_core/infrastructure/src/: lib.rs
app_core/infrastructure/src/implement/: mod.rs
app_core/infrastructure/src/implement/git_branch/: command.rs  service.rs
app_core/infrastructure/src/implement/git_log/: command.rs  service.rs
app_core/presentation/: Cargo.toml
app_core/presentation/src/: lib.rs
app_core/presentation/tests/: git_branch.rs  git_log.rs
app_core/presentation/tests/fixture/: git_branch_fixture.rs  git_log_fixture.rs  mod.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
